--- a/Proyecto_Final_Bujakiewicz_Ricardo.ipynb
+++ b/Proyecto_Final_Bujakiewicz_Ricardo.ipynb
@@ -1104,7 +1104,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Hipotesis 3: La Combinación de Sexo Masculino y Azúcar en Ayunas Elevada (FastingBS = 1) Aumenta Drásticamente la Probabilidad de Diagnostico Positivo Variables clave a testear: Sex y FastingBS."
+        "**Hipotesis 3:** La Combinación de Sexo Masculino y Azúcar en Ayunas Elevada (FastingBS = 1) Aumenta Drásticamente la Probabilidad de Diagnostico Positivo Variables clave a testear: Sex y FastingBS."
       ],
       "metadata": {
         "id": "1nXk7fAIn7Dg"
@@ -1496,7 +1496,7 @@
         "---\n",
         "El modelo demostro que la informacion clave para el diagnostico de la enfermedad cardiaca en este dataset proviene de la prueba de esfuerzo (principalmente el segmento ST y la frecuencia cardiaca máxima).\n",
         "\n",
-        "El modelo Random Forest entrenado con las 10 caracteristicas principales demostro alta efectividad para predecir la enfermedad cardiaca en este dataset.El modelo alcanzo una precision global del 85.14% en el conjunto de prueba.\n",
+        "El modelo Random Forest entrenado con las 10 caracteristicas principales demostro alta efectividad para predecir la enfermedad cardiaca en este dataset.El modelo alcanzo una precision del 85.14% en el conjunto de prueba.\n",
         "\n"
       ],
       "metadata": {
